force-app/main/default/objects/Application_Verification_Summary__c/Application_Verification_Summary__c.object-meta.xml
<CustomObject>
    <label>Application Verification Summary</label>
    <nameField>
        <label>Application Verification Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Verification Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>