force-app/main/default/objects/Application_Verification_Summary__c/fields/Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Affiliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affiliation</label>
    <referenceTo>hed__Affiliation__c</referenceTo>
    <relationshipLabel>Application Verification Summaries</relationshipLabel>
    <relationshipName>Application_Verification_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>