force-app/main/default/objects/Application_Verification_Summary__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Application Verification Summaries</relationshipLabel>
    <relationshipName>Application_Verification_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>