force-app/main/default/objects/Application_Verification_Summary__c/fields/Detail_Template_Comments__c.field-meta.xml
<CustomField>
    <fullName>Detail_Template_Comments__c</fullName>
    <label>Detail Template Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>