force-app/main/default/objects/Application_Verification_Summary__c/fields/Document_Template_Comments__c.field-meta.xml
<CustomField>
    <fullName>Document_Template_Comments__c</fullName>
    <label>Document Template Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>