force-app/main/default/objects/Application_Verification_Summary__c/fields/Education_History__c.field-meta.xml
<CustomField>
    <fullName>Education_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Education History</label>
    <referenceTo>hed__Education_History__c</referenceTo>
    <relationshipLabel>Application Verification Summaries</relationshipLabel>
    <relationshipName>Application_Verification_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>