force-app/main/default/objects/Application_Verification_Summary__c/fields/Mismatched_Field_List__c.field-meta.xml
<CustomField>
    <fullName>Mismatched_Field_List__c</fullName>
    <label>Mismatched Field List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>