force-app/main/default/objects/Application_Verification_Summary__c/fields/Percentage_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Confidence__c</fullName>
    <label>Percentage Confidence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>