force-app/main/default/objects/Application_Verification_Summary__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test</label>
    <referenceTo>hed__Test__c</referenceTo>
    <relationshipLabel>Application Verification Summaries</relationshipLabel>
    <relationshipName>Application_Verification_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>