force-app/main/default/objects/Application_Verification_Summary__c/fields/Verification_Analysis_Report__c.field-meta.xml
<CustomField>
    <fullName>Verification_Analysis_Report__c</fullName>
    <label>Verification Analysis Report</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>